yaml/service/http-go-np.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: http-go-svc
  name: http-go-svc
  namespace: np-test
spec:
  type: NodePort
  ports:
  - name: 80-8080
    nodePort: 30001
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: http-go
status:
  loadBalancer: {}
